tests/e2e/app/sfdx/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <label>Contact</label>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>