tests/e2e/app/sfdx/force-app/main/default/objects/Contact/fields/Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_Id__c</fullName>
    <description>External ID used by SF Bulk Loader E2E tests to upsert Contact records without ID mapping. Must be unique and non-null in test fixtures. Used in contact-upsert-relationship spec as the upsert key while Account__r.External_Id__c resolves the AccountId.</description>
    <externalId>true</externalId>
    <label>Contact External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>