tests/e2e/app/sfdx/force-app/main/default/objects/Contact/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <description>Custom Account lookup used by Tier 2 E2E specs to exercise the &lt;lookup&gt;__r.External_Id__c (H1 byte-exact) relationship-header upsert path. Not used by production code. Named ParentAccount (not Account) to avoid colliding with the reserved name of the standard Contact.AccountId relationship.</description>
    <label>E2E Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ParentAccount</relationshipName>
    <relationshipLabel>E2E Contacts</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>